--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+box-sizing: border-box;
+background-color: #010218;
+padding:0;
+color:#f9f9f9;
+font-family: 'Cairo', sans-serif;
+}
+a{
+  color:#f9f9f9;
+  text-decoration: none;
+}
+@media only screen and (min-width:768px){
+  body{
+    font-size:16px;
+  }
+}
+@media only screen and (min-width:489) and (max-width:768px){
+  body{
+    font-size:15px;
+  }
+}
+@media only screen and (max-width:479px){
+  body{
+    font-size:14px;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
